--- a/Pages/Page_Home.html
+++ b/Pages/Page_Home.html
@@ -35,7 +35,7 @@
         <img class="banner_logo_img" src="" alt="">
         <div class="banner_desc fl_ctr">
             <img class="banner_logo_name" src="" alt="">
-            <a href="" class="button_play_now">PLAY NOW</a>
+            <a href="https://github.com/YosuaG19/Balorant_Yosua/" class="button_play_now">PLAY NOW</a>
         </div>
     </section>  
 
