update form dan banner

--- a/Pages/Page_Agents.html
+++ b/Pages/Page_Agents.html
@@ -63,7 +63,7 @@
             <img class="agent_role" src="../Assests/Agent/Index.svg" alt="">
         </div>
         <div class="agent_cont" id="agent_6">
-            <h2 class="agent_name">Comming Soon</h2>
+            <h2 class="agent_name">Coming Soon</h2>
             <img class="agent_img" src="../Assests/Agent/Comming_Soon.png" alt="">
             <img class="agent_role" src="../Assests/Agent/Havoc.svg" alt="">
         </div>
