--- a/Pages/Page_Home.html
+++ b/Pages/Page_Home.html
@@ -33,6 +33,7 @@
     <!-- Banner Download Section -->
     <section class="download_section">
         <img class="banner_logo_img" src="" alt="">
+        <img class="banner_best_agent" src="" alt="">
         <div class="banner_desc fl_ctr">
             <img class="banner_logo_name" src="" alt="">
             <a href="https://github.com/YosuaG19/Balorant_Yosua/" class="button_play_now">PLAY NOW</a>
@@ -74,9 +75,10 @@
     </section>
 
     <!-- Best Agent Section -->
-     <section class="best_agent_temp">
-        <img src="" alt="">
-     </section>
+    <!-- <section class="best_agent_temp">
+    <img src="" alt="">
+    </section> -->
+    <section class="long-line"></section>
 
     <!-- More Maps Section -->
      <section class="fl_ctr Home_to_Map">
