--- a/Pages/coba.html
+++ b/Pages/coba.html
@@ -2,43 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
-    <link rel="icon" type="image/png" href="../Assests/Logo.png">
-    <link rel="stylesheet" href="../Css/global.css" class="stylesheet">
-    <link rel="stylesheet" href="../Css/report_style.css" class="stylesheet">
-    <title>PALORANT REPORTS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Css/coba.css">
+    <link rel="stylesheet" href="../Css/global.css">
+    <title>Document</title>
 </head>
-<body class="bg_white">
-    <!-- Navbar -->
-    <nav class="bg_black fl_ctr">
-        <div class="cont_nav fl_ctr">
-            <div class="cont_logo fl_ctr">
-                <img alt="Palorant">
-            </div>
-            <div class="cont_menu fl_ctr">
-                <a class="menu_a" href="./Page_Home.html">HOME</a>
-                <a class="menu_a" href="./Page_Agents.html">AGENTS</a>
-                <a class="menu_a" href="./Page_Maps.html">MAPS</a>
-                <a class="menu_a" href="./Page_News.html">NEWS</a>
-                <a class="now" href="#">REPORT</a>
-            </div>
-            <div class="cont_hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Banner Title -->
-    <div class="banner_title"></div>
-    
-    <!-- Page Title -->
-    <!-- <div class="cont_title">
-        <img class="title title_sp" src="../Assests/Title/Title_Report.png" alt="">
-    </div> -->
-
-    <!-- Report Section -->
+<body>
     <section class="report_section fl_ctr">
         <div class="info fl_ctr">
             <span class="info_text">
@@ -93,35 +62,10 @@
 
             <div class="form_submit fl_ctr">
                 <input class="btn_submit" type="submit">
-                <span>
-                    <input type="checkbox" name="" id="follow_up">
-                    <label for="">I want follow up Email</label>
-                </span>
             </div>
         </form>
-
-        <!-- pop up -->
-        <div class="popup fl_ctr no_active" id="popup">
-            <div class="close" id="close">
-                <span></span>
-                <span></span>
-            </div>
-            <img class="popup_logo" src="../Assests/Logo_grey.png">
-            <p>We Will Help You Soon</p>
-        </div>
      </section>
 
-
-    <!-- Footer -->
-    <footer class="fl_ctr bg_black footer">
-        <div class="footer_1 fl_ctr" >
-            <img src="../Assests/Logo_Giot_Games.svg" alt="Giot Games">
-        </div>
-        <div class="footer_2 fl_ctr">
-            <p>© 2025 Giot Games, Inc. GIOT GAMES, PALORANT and any associated logos are trademarks, service marks, and/or registered trademarks of Giot Games, Inc.</p>
-        </div>
-    </footer>
 </body>
-<script src="../Js/report.js"></script>
-<script src="../Js/hamburger.js"></script>
+<script src="../Js/coba.js"></script>
 </html>
