--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
     <link rel="icon" type="image/png" href="Assests/Logo.png">
     <link rel="stylesheet" href="Css/index_style.css">
+    <link rel="stylesheet" href="Css/global.css">
     <title>PALORANT</title>
 </head>
 <body>
