--- a/Pages/Page_Home.html
+++ b/Pages/Page_Home.html
@@ -33,7 +33,6 @@
     <!-- Banner Download Section -->
     <section class="download_section">
         <img class="banner_logo_img" src="" alt="">
-        <img class="banner_best_agent" src="" alt="">
         <div class="banner_desc fl_ctr">
             <img class="banner_logo_name" src="" alt="">
             <a href="https://github.com/YosuaG19/Balorant_Yosua/" class="button_play_now">PLAY NOW</a>
@@ -74,11 +73,35 @@
         </div>
     </section>
 
-    <!-- Best Agent Section -->
-    <!-- <section class="best_agent_temp">
-    <img src="" alt="">
-    </section> -->
-    <section class="long-line"></section>
+    <!-- <section class="long-line"></section> -->
+
+    <section class="best_agent_section">
+        <img class="best_agent_bg_img" src="../Assests/Home/Havoc.svg" alt="">
+        <img class="best_agent_bg_img" src="../Assests/Home/Cloak (Tristan).png" alt="">
+        <span class="opacity_filter"></span>
+        <div class="best_agent_info">
+            <span class="top_info fl_ctr">
+                <span class="fl_ctr">
+                    <img src="../Assests/Home/Havoc.png" alt="">
+                    <h3>havoc</h3>
+                </span>
+                <span class="fl_ctr">
+                    <img src="../Assests/Home/Bullseyes.png" alt="">
+                    <h3>Bullseye</h3>
+                </span>
+            </span>
+            <img class="chart" src="../Assests/Home/Chart.png" alt="">
+            <img class="win_rate" src="../Assests/Home/Win rate.png" alt="">
+        </div>
+        <span class="best_agent_name">
+            <h2>Cloak</h2>
+        </span>
+        <div class="best_agent_img">
+            <img src="../Assests/Home/Cloak (Tristan).png" alt="">
+        </div>
+    </section>
+
+
 
     <!-- More Maps Section -->
      <section class="fl_ctr Home_to_Map">
