--- a/Pages/Page_Reports.html
+++ b/Pages/Page_Reports.html
@@ -93,8 +93,8 @@
 
             <div class="form_submit fl_ctr">
                 <input class="btn_submit" type="submit">
-                <span>
-                    <input type="checkbox" name="" id="follow_up">
+                <span class="fl_ctr checkbox">
+                    <input type="checkbox" name="checkbox" id="follow_up">
                     <label for="">I want follow up Email</label>
                 </span>
             </div>
